# sudoku-solver

./: .gitignore  README.md  pyproject.toml
assets/digit_templates/: README.md
output/: 09_recognized_grid.txt  10_solved_grid.txt  run_summary.json
src/sudoku_solver/: cell_extraction.py  cli.py  config.py  geometry.py  grid_detection.py  ocr.py  pipeline.py  preprocess.py  solver.py  warp.py
src/sudoku_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_geometry.py  test_ocr.py  test_pipeline.py  test_solver.py
